--- a/src/components/atoms/TestimonialCard.css
+++ b/src/components/atoms/TestimonialCard.css
@@ -231,3 +231,30 @@
     font-size: 3rem;
   }
 }
+
+@media (max-width: 480px) {
+  .testimonial-card {
+    min-width: 85vw;
+    max-width: 90vw;
+    padding: 1rem;
+    min-height: 250px;
+  }
+
+  .testimonial-card__photo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .testimonial-card__name {
+    font-size: 1rem;
+  }
+
+  .testimonial-card__text {
+    font-size: 0.9rem;
+    line-height: 1.5;
+  }
+
+  .testimonial-card__quote-icon {
+    font-size: 2.5rem;
+  }
+}
